feat: modify for locals and add some personal information

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,17 +1,17 @@
 ---
-name: Do Trong Khanh
+name: Chun Hao Chen
 avatar: /static/images/avatar.jpg
 occupation: Fullstack Engineer
-company: YouNet Media - YouNet Group
-email: dotrongkhanh.dev@gmail.com
-twitter: https://twitter.com/karhdo
-linkedin: https://www.linkedin.com/in/karhdo/
-github: https://github.com/Karhdo
+company: Amaryllo
+email: chchen.zee@gmail.com
+twitter: 
+linkedin: https://www.linkedin.com/in/chchen-dev
+github: https://github.com/crazycjh
 ---
 
 import Twemoji from './components/ui/Twemoji';
 
-## Hello, folks! <Twemoji className="mx-2" emoji="waving-hand" /> I'm Trong Khanh (aka Karhdo)
+## Hello, there! <Twemoji className="mx-2" emoji="waving-hand" /> I'm Chun Hao Chen
 
 I have a passion for **JavaScript/Typescript** and website development.
 I'm currently a fullstack developer at **YouNet Media**, deeply engaged in the **EcomHeat** project, which entails market share management, competitor research, and fostering e-commerce growth.
