--- a/data/blog/react-useEffect.mdx
+++ b/data/blog/react-useEffect.mdx
@@ -3,7 +3,7 @@ title: 'Day 10 — What is useEffect?'
 date: '2025-11-10'
 lastmod: '2025-11-10'
 tags: ['reactjs']
-summary: 'Exploring how Custom Hooks revolutionized React by solving logic reuse challenges that plagued Class components, HOCs, and Render Props - making code cleaner, more composable, and easier to maintain.'
+summary: 'Understanding useEffect - the essential hook for managing side effects in React function components, from data fetching to event listeners, with proper cleanup and dependency management.'
 ---
 
 import Twemoji from './components/ui/Twemoji';
