article: day 12 for useReducer

--- a/data/blog/Why-use-immutable-syntax-when-updating-state.mdx
+++ b/data/blog/Why-use-immutable-syntax-when-updating-state.mdx
@@ -14,7 +14,7 @@ Not exactly - the real reason is **React can't detect the change if the referenc
 
 ### How React check for changes
 
-* **  tives (numbers, strings, booleans)** → React compares by value.
+* **Primitives (numbers, strings, booleans)** → React compares by value.
 * **References (objects, arrays)** → React compares by reference (memory address).
 
 React doesn't do deep comparison. it only checks if the value or reference changed
