Update about page: add Beyond Code section with photography and travel experience

--- a/data/authors/default.en.mdx
+++ b/data/authors/default.en.mdx
@@ -13,9 +13,9 @@ import Twemoji from './components/ui/Twemoji';
 
 ## Hello, there! <Twemoji className="mx-2" emoji="waving-hand" /> I'm Andy/Chun Hao Chen
 
-<Twemoji emoji="waving-hand" /> Hi, I’m Andy/Chun Hao Chen, a passionate Full-Stack Developer with a Master’s degree in Computer Science and a Bachelor’s in Electrical Engineering. I have a strong foundation in frontend (Vue.js, Nuxt.js) and backend development, along with hands-on experience in low-level C programming.
+<Twemoji emoji="waving-hand" /> Hi, I'm Andy/Chun Hao Chen, a passionate Full-Stack Developer with a Master's degree in Computer Science and a Bachelor's in Electrical Engineering. I have a strong foundation in frontend (Vue.js, Nuxt.js) and backend development, along with hands-on experience in low-level C programming.
 
-<Twemoji emoji="light-bulb" /> I’ve worked on cross-functional projects across software, firmware, and hardware teams. I enjoy bridging the gap between technical complexity and user needs, and I’m skilled at communicating technical solutions to clients, sales teams, and project managers. I’m also experienced in optimizing system performance, building CI/CD pipelines, and using Docker, GitLab, and Bitbucket to streamline deployments.
+<Twemoji emoji="light-bulb" /> I've worked on cross-functional projects across software, firmware, and hardware teams. I enjoy bridging the gap between technical complexity and user needs, and I'm skilled at communicating technical solutions to clients, sales teams, and project managers. I'm also experienced in optimizing system performance, building CI/CD pipelines, and using Docker, GitLab, and Bitbucket to streamline deployments.
 
 <Twemoji emoji="gear" /> I actively explore AI tools and build custom automation features to improve workflow and boost productivity. Some examples include implementing Cloudflare Tunnel and R2 for secure and scalable infrastructure, and using n8n to automate repetitive tasks across teams.
 
@@ -23,6 +23,24 @@ import Twemoji from './components/ui/Twemoji';
 
 <Twemoji emoji="wrench" /> Tech Stack: Vue/Nuxt.js, JavaScript/TypeScript, Next.js, Docker, CI/CD, Linux, Cloudflare, n8n
 
-Let’s connect and talk about technology, product engineering, or potential collaborations!
+Let's connect and talk about technology, product engineering, or potential collaborations!
 
+## Why have this blog?
 
+> Share what I learn, grow together.
+
+I created this blog to document and share the knowledge, technical insights, and practical experiences I've gained throughout my software development journey.
+
+I believe that through sharing, I can not only help myself organize my thoughts and deepen my understanding, but also provide valuable references for other developers. I hope this can become a platform for mutual learning and collective growth.
+
+Looking forward to connecting with you! <Twemoji emoji="clinking-beer-mugs" />
+
+## Beyond Code
+
+<Twemoji emoji="camera" /> Outside of coding, I'm passionate about photography and travel. Since 2010, I've been capturing moments through my lens, working on diverse commercial projects including magazine shoots, brand campaigns, event coverage, and promotional videos.
+
+<Twemoji emoji="backpack" /> I started backpacking in 2016 and have since explored 23 countries. I love combining photography and hiking to deeply connect with places—capturing local culture through my lens and meeting people to learn their stories and customs. These experiences have shaped my adaptability, cross-cultural communication skills, and creative problem-solving approach, which I bring into my development work.
+
+<Twemoji emoji="mountain" /> Hiking and mountaineering are not just about exploring nature—they're about pushing personal limits. From Taiwan's peaks to European mountain trails, each climb teaches me perseverance and breakthrough.
+
+📸 Portfolio: [Facebook](https://www.facebook.com/andyfootprint) | [Photography](https://reurl.cc/L1kWqK) | [More Projects](https://www.flickr.com/photos/135166157@N06/albums) | [Video Work](https://reurl.cc/6g6vxM)
