--- a/data/authors/default.zh-TW.mdx
+++ b/data/authors/default.zh-TW.mdx
@@ -11,21 +11,21 @@ github: https://github.com/crazycjh
 
 import Twemoji from './components/ui/Twemoji';
 
-## Hello, there! <Twemoji className="mx-2" emoji="waving-hand" /> I'm Andy/Chun Hao Chen
+## 你好！<Twemoji className="mx-2" emoji="waving-hand" /> 我是 Andy/陳俊豪
 
-<Twemoji emoji="waving-hand" /> Hi, I’m Andy/Chun Hao Chen, a passionate Full-Stack Developer with a Master’s degree in Computer Science and a Bachelor’s in Electrical Engineering. I have a strong foundation in frontend (Vue.js, Nuxt.js) and backend development, along with hands-on experience in low-level C programming.
+<Twemoji emoji="waving-hand" /> 嗨，我是 Andy/陳俊豪，一位熱情的全端工程師，擁有資訊工程碩士學位和電機工程學士學位。我在前端（Vue.js、Nuxt.js）和後端開發方面有紮實的基礎，同時也有底層 C 語言程式設計的實務經驗。
 
-<Twemoji emoji="light-bulb" /> I’ve worked on cross-functional projects across software, firmware, and hardware teams. I enjoy bridging the gap between technical complexity and user needs, and I’m skilled at communicating technical solutions to clients, sales teams, and project managers. I’m also experienced in optimizing system performance, building CI/CD pipelines, and using Docker, GitLab, and Bitbucket to streamline deployments.
+<Twemoji emoji="light-bulb" /> 我曾參與軟體、韌體和硬體團隊的跨職能專案。我擅長在技術複雜性與使用者需求之間搭建橋樑，並且能夠向客戶、業務團隊和專案經理清楚地溝通技術解決方案。我在系統效能優化、建置 CI/CD 流程，以及使用 Docker、GitLab 和 Bitbucket 來簡化部署方面也有豐富經驗。
 
-<Twemoji emoji="gear" /> I actively explore AI tools and build custom automation features to improve workflow and boost productivity. Some examples include implementing Cloudflare Tunnel and R2 for secure and scalable infrastructure, and using n8n to automate repetitive tasks across teams.
+<Twemoji emoji="gear" /> 我積極探索 AI 工具，並建立客製化的自動化功能來改善工作流程、提升生產力。例如實作 Cloudflare Tunnel 和 R2 來建立安全且可擴展的基礎架構，以及使用 n8n 來自動化團隊間的重複性任務。
 
-<Twemoji emoji="brain" /> In my free time, I write technical blogs, experiment with new technologies, and develop side projects to continuously sharpen my skills and stay up-to-date with industry trends.
+<Twemoji emoji="brain" /> 在閒暇時間，我撰寫技術部落格、實驗新技術，並開發個人專案來持續精進技能，保持與產業趨勢同步。
 
-<Twemoji emoji="wrench" /> Tech Stack: Vue/Nuxt.js, JavaScript/TypeScript, Next.js, Docker, CI/CD, Linux, Cloudflare, n8n
+<Twemoji emoji="wrench" /> 技術棧：Vue/Nuxt.js、JavaScript/TypeScript、Next.js、Docker、CI/CD、Linux、Cloudflare、n8n
 
-Let’s connect and talk about technology, product engineering, or potential collaborations!
+歡迎與我聯繫，一起討論技術、產品工程或潛在的合作機會！
 
-## Why have this blog?
+## 為什麼建立這個部落格？
 
 > 分享所學，共同成長。
 
@@ -35,3 +35,12 @@ Let’s connect and talk about technology, product engineering, or potential col
 
 期待您的交流與指教！<Twemoji emoji="clinking-beer-mugs" />
 
+## Beyond Code
+
+<Twemoji emoji="camera" /> 在寫程式之外，我熱愛攝影與旅行。自2010年開始接觸攝影，累積了豐富的商業拍攝經驗，包括雜誌拍攝、品牌形象影片、活動紀錄等多元案件。
+
+<Twemoji emoji="backpack" /> 2016年開始背包旅行，至今已走訪23個國家。我喜歡透過攝影與健行的方式深入認識一個地方，用鏡頭捕捉當地的人文風景，與當地人互動，了解不同文化的故事與習慣。這些旅行經驗培養了我的適應力、跨文化溝通能力，以及解決問題的創意思維，這些特質也深深影響著我在開發工作上的思考方式。
+
+<Twemoji emoji="mountain" /> 登山健行不僅是探索自然的方式，更是挑戰自我的過程。從台灣的百岳到歐洲的山徑，每一次的攀登都讓我學會堅持與突破。
+
+📸 作品集：[Facebook](https://www.facebook.com/andyfootprint) | [平面攝影](https://reurl.cc/L1kWqK) | [更多作品](https://www.flickr.com/photos/135166157@N06/albums) | [動態攝影](https://reurl.cc/6g6vxM)
