refactor: update tags and disable multilingual support

--- a/data/blog/What-is-JSX.mdx
+++ b/data/blog/What-is-JSX.mdx
@@ -2,7 +2,7 @@
 title: 'Day 2: What is JSX?'
 date: '2025-10-19'
 lastmod: '2025-10-19'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn what JSX is, how it compiles from React 16 to React 17+, and master essential JSX syntax rules for writing React components.'
 ---
 
