--- a/data/blog/Why-use-immutable-syntax-when-updating-state.mdx
+++ b/data/blog/Why-use-immutable-syntax-when-updating-state.mdx
@@ -2,7 +2,7 @@
 title: 'Day 7 : Why use immutable syntax when updating state?'
 date: '2025-10-28'
 lastmod: '2025-10-28'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn why React requires immutable state updates and how reference equality checking works. Understand the difference between primitive and reference comparisons, common pitfalls with object mutations, and best practices for creating new references to trigger re-renders correctly.'
 ---
 
