--- a/data/blog/react-avoiding-stale-closures.mdx
+++ b/data/blog/react-avoiding-stale-closures.mdx
@@ -2,7 +2,7 @@
 title: 'Day 14: Avoiding Stale Closures in React'
 date: '2025-11-16'
 lastmod: '2025-11-16'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn how to fix stale closure issues in React using three key techniques: dependency arrays, functional updaters (setState(prev => ...)), and useRef for latest values. Includes proper cleanup patterns for async operations to prevent memory leaks and race conditions.'
 ---
 
