--- a/data/blog/react-reconciliation.mdx
+++ b/data/blog/react-reconciliation.mdx
@@ -2,7 +2,7 @@
 title: 'Day 5: What Is React Reconciliation?'
 date: '2025-10-28'
 lastmod: '2025-10-28'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn how React Reconciliation works - the smart update process that compares Virtual DOM trees using three key rules: different element types get replaced, same types get updated, and lists use keys for tracking. This efficient diffing algorithm reduces O(n³) complexity to O(n), updating only what actually changed in the real DOM.'
 ---
 
