--- a/data/blog/react-state-management-comparison.mdx
+++ b/data/blog/react-state-management-comparison.mdx
@@ -2,7 +2,7 @@
 title: 'Day 15: Context API vs Local State vs Zustand'
 date: '2025-11-23'
 lastmod: '2025-11-23'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understanding when to use local state, Context API, or Zustand for state management in React applications. Learn the scope, best practices, and practical examples for each approach.'
 ---
 
