--- a/data/blog/react-useEffect-vs-useLayoutEffect.mdx
+++ b/data/blog/react-useEffect-vs-useLayoutEffect.mdx
@@ -2,7 +2,7 @@
 title: 'Day 11: useEffect vs useLayoutEffect — Timing and Use Cases'
 date: '2025-11-13'
 lastmod: '2025-11-13'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understanding the critical timing difference between useEffect and useLayoutEffect - when to use each hook to prevent UI flicker and optimize performance in React applications.'
 ---
 
