--- a/data/blog/react-useEffect.mdx
+++ b/data/blog/react-useEffect.mdx
@@ -2,7 +2,7 @@
 title: 'Day 10 — What is useEffect?'
 date: '2025-11-10'
 lastmod: '2025-11-10'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understanding useEffect - the essential hook for managing side effects in React function components, from data fetching to event listeners, with proper cleanup and dependency management.'
 ---
 
