--- a/data/blog/the-lifecycle-of-a-react-component.mdx
+++ b/data/blog/the-lifecycle-of-a-react-component.mdx
@@ -2,7 +2,7 @@
 title: 'Day 3: The Lifecycle of a React Component'
 date: '2025-10-22'
 lastmod: '2025-10-22'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn about React component lifecycle - how components mount, update, and unmount - and understand the differences between class component lifecycle methods and function component Hooks.'
 ---
 
