--- a/data/blog/react-closure-capture-values.mdx
+++ b/data/blog/react-closure-capture-values.mdx
@@ -2,7 +2,7 @@
 title: 'Day 13: Capturing Values in Render & Closure Behavior'
 date: '2025-11-16'
 lastmod: '2025-11-16'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understand how React callbacks capture values from the moment they are created, causing stale state issues in setInterval, useEffect, and event handlers. Learn to fix this using functional updaters and refs to always access fresh values.'
 ---
 
