--- a/data/blog/react-custom-hooks.mdx
+++ b/data/blog/react-custom-hooks.mdx
@@ -2,7 +2,7 @@
 title: 'Day 8 : What Problems Do Custom Hooks Solve?'
 date: '2025-11-10'
 lastmod: '2025-11-10'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Exploring how Custom Hooks revolutionized React by solving logic reuse challenges that plagued Class components, HOCs, and Render Props - making code cleaner, more composable, and easier to maintain.'
 ---
 
