--- a/data/blog/react-hooks-top-level.mdx
+++ b/data/blog/react-hooks-top-level.mdx
@@ -2,7 +2,7 @@
 title: 'Day 9: Why must Hooks be called at the top level?'
 date: '2025-11-08'
 lastmod: '2025-11-08'
-tags: ['reactjs']
+tags: ['react']
 summary: ''
 ---
 
