--- a/data/blog/react-key-prop.mdx
+++ b/data/blog/react-key-prop.mdx
@@ -2,7 +2,7 @@
 title: 'Day 6 : Why is the key prop important in lists?'
 date: '2025-10-28'
 lastmod: '2025-10-28'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understand why React keys matter in list rendering. Learn how using array indexes as keys causes UI bugs like jumping input values, and why stable unique IDs are essential for proper reconciliation. Discover the difference between correct and incorrect key usage with practical examples.'
 ---
 
