--- a/data/blog/react-prop-drilling.mdx
+++ b/data/blog/react-prop-drilling.mdx
@@ -2,7 +2,7 @@
 title: 'Day 16: What is Prop Drilling? Why is it a Problem?'
 date: '2025-11-26'
 lastmod: '2025-11-26'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn what prop drilling is in React, why passing props through multiple component layers causes maintenance issues, and how to solve it using Context API or state management tools.'
 ---
 
