--- a/data/blog/react-useState-vs-useReducer.mdx
+++ b/data/blog/react-useState-vs-useReducer.mdx
@@ -2,7 +2,7 @@
 title: 'Day 12: useState vs useReducer — When to Choose Which?'
 date: '2025-11-15'
 lastmod: '2025-11-15'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn the key differences between useState and useReducer in React. Understand when to use simple state management versus structured reducers for complex state logic, with practical examples including counters and form management.'
 ---
 
