--- a/data/blog/virtual-dom.mdx
+++ b/data/blog/virtual-dom.mdx
@@ -2,7 +2,7 @@
 title: 'Day 4: What problem does the Virtual DOM solve?'
 date: '2025-10-27'
 lastmod: '2025-10-27'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Learn why React uses a Virtual DOM instead of direct DOM manipulation. Discover how this JavaScript object tree in memory optimizes performance by batching updates, reducing reflows and repaints, while providing a better developer experience through declarative UI patterns.'
 ---
 
