--- a/data/blog/what-Is-a-pure-function.mdx
+++ b/data/blog/what-Is-a-pure-function.mdx
@@ -2,7 +2,7 @@
 title: 'Day 1: What Is a Pure Function? Why Should React Components Stay Pure?'
 date: '2025-10-16'
 lastmod: '2025-10-16'
-tags: ['reactjs']
+tags: ['react']
 summary: 'Understanding pure functions and why React components should stay pure. Learn the key rules and benefits of writing pure components in React.'
 ---
 
